Fixed jumping scrollbar issue

--- a/client/src/stylesheets/Contact.css
+++ b/client/src/stylesheets/Contact.css
@@ -1,7 +1,6 @@
 :local(.contact) {
   text-align: left;
-  padding: 5px;
-  margin: 5px;
+  padding: 10px 200px 10px 200px;
 }
 
 :local(button) {
